# incomp3D

./: .gitignore  CMakeLists.txt  LICENSE  README.md
lib/: CMakeLists.txt  boundary_condition.f90  case_common.f90  fluid_field.f90  fractional_step.f90  fractional_step_full_implicit.f90  fractional_step_implicit.f90  interpolation.f90  mesh.f90  mesh_reader.f90  rectilinear_mesh.f90  setting_parameter.f90  simulator.f90  writeout.f90
lib/common/: CMakeLists.txt  IO_operator.f90  abstract_legacy_vtk_writer.f90  command_line_args.f90  floating_point_parameter.f90  linear_algebra.f90  system_operator.f90  time_monitor.f90  vtk_field_data.f90  vtk_rectilinear_grid_writer.f90  vtk_structured_points_writer.f90
sample/: Makefile  TaylorGreen.msh  config.txt  taylor_green.md
sample/src/: case_tgv.f90  fs3duns.f90
sample2/: Makefile  cavity.md  cavity.msh  config.txt  ghia.xlsx  ghia_u.csv  ghia_v.csv  result.py  solver_settings.txt
sample2/mesh/: Makefile  cavitymesh.f90
sample2/src/: case_cavity.f90  fs3duns.f90
sample3/: Makefile  config.txt  poiseuille.md  poiseuille.msh
sample3/src/: case_poiseuille.f90  fs3duns.f90
sample4/: Makefile
sample4/mesh/: Makefile  poiseuille_mesh.f90
sample4/src/: main.f90
sample5/: Makefile  ch395_turb_sta.txt  config.txt  readme.md  solver_settings.txt
sample5/mesh/: Makefile  meshgen.f90
sample5/src/: case_channel.f90  les_solver.f90  main.f90
